[project]
name = "formalpdf"
version = "0.1.1"
description = "An Apache-licensed package for extracting, creating, filling, and flattening PDF Forms."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pypdfium2==5.0.0b2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "-q"

[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"
